# llm-poc

./: .gitignore  .pre-commit-config.yaml  AZURE_VM_DEPLOYMENT.md  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose-local.yml  docker-compose.yml  requirements.txt  ruff.toml  run_tests.py
django_api/: .env.sample  Dockerfile  gunicorn.conf.py  manage.py  populate_data.py  pytest.ini  requirements.txt  test_requirements.txt
django_api/api/: models.py  serializers.py  urls.py  views.py
django_api/api/migrations/: 0001_initial.py
django_api/mock_api/: asgi.py  settings.py  urls.py  wsgi.py
django_api/tests/: __init__.py  conftest.py  test_models.py  test_views.py
flask_llm/: .env.example  .env.sample  Dockerfile  README.md  api_tools.py  app.py  auth_utils.py  create_user.py  gunicorn.conf.py  llm_agent.py  models.py  pytest.ini  requirements.txt  settings.py  test_requirements.txt
flask_llm/migrations/versions/: 4b9061d5a2d7_update_counter_table.py  7ee1d1e87355_.py  7fd7ee66de69_create_users_table.py  d7af48742a25_add_counter_table.py
flask_llm/templates/: index.html  login.html
flask_llm/tests/: __init__.py  conftest.py  test_api_tools.py  test_app.py  test_llm_agent.py
mcp_server/: .env.sample  README.md  contract_tools.py  example_usage.py  invoice_tools.py  models.py  pyproject.toml  requirements.txt  run_tests.py  serial_tools.py  server.py  service_tools.py
mcp_server/tests/: __init__.py  test_integration.py  test_server.py  test_tools.py
nginx/: nginx.conf
nginx/ssl/: README.md
